<resources >
    <string name="app_name">Garasee</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Get the right price for the best car!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_name">Please enter your name!</string>
    <string name="invalid_email">Please enter a valid email!</string>
    <string name="invalid_number">Please enter a valid numbers only!</string>
    <string name="invalid_year">Please enter a valid year!</string>
    <string name="invalid_password">Password should be at least 8 characters!</string>
    <string name="invalid_city">Please select a city!</string>
    <string name="message_login_page">Sign in to your account</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="confirm_passsword">Confirm passsword</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="city">City</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string-array name="condition_array">
        <item>New</item>
        <item>Second</item>
    </string-array>
    <string-array name="injection_array">
        <item>Direct Injection</item>
        <item>Multi-Point Injection</item>
    </string-array>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="editpassword">Edit Password</string>
    <string name="editpassworddesc">Change Your Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpasssword">Confirm New Password</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
</resources>