<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignupActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linear2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/create_your_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <com.example.garasee.view.customView.NameEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/name"
            android:paddingHorizontal="24dp"
            android:background="@drawable/whitebox_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodeHolder"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_showFlag="true"
            app:ccp_autoFormatNumber="false"
            app:ccp_showArrow="true"
            app:ccp_defaultPhoneCode="62"
            app:ccp_textSize="16sp"
            app:ccp_arrowSize="16sp"
            app:ccpDialog_keyboardAutoPopup="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/whitebox_background"
            android:paddingHorizontal="4dp"
            />

        <com.example.garasee.view.customView.NumberEditText
            android:id="@+id/ed_register_phone"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/phone_number"
            android:layout_marginLeft="8dp"
            android:paddingHorizontal="24dp"
            android:background="@drawable/whitebox_background"
             />

        </LinearLayout>

        <com.example.garasee.view.customView.NameEditText
            android:id="@+id/ed_register_city"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/city"
            android:paddingHorizontal="24dp"
            android:background="@drawable/whitebox_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.garasee.view.customView.EmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingHorizontal="24dp"
            android:background="@drawable/whitebox_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            />

        <com.example.garasee.view.customView.PasswordEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:paddingHorizontal="24dp"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            android:background="@drawable/whitebox_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.garasee.view.customView.PasswordEditText
            android:id="@+id/ed_register_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="12dp"
            android:hint="@string/confirm_passsword"
            android:paddingHorizontal="24dp"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            android:background="@drawable/whitebox_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/blue"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="1.0"
            />

        <TextView
            android:id="@+id/signinnow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>